criação do alert error

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <!-- para colocar o script no head, utilize a propriedade defer -->
 </head>
 <body>
+    <div class="alert-error">
+        Digite somente números
+    </div>
+
     <div class="container">
         <main class="card">
             <form>
